--- a/imgur-client/package.json
+++ b/imgur-client/package.json
@@ -16,6 +16,7 @@
     "gulp-server-livereload": "^1.3.0",
     "gulp-util": "^3.0.4",
     "gulp-watch": "^4.2.4",
+    "history": "^1.12.3",
     "node-fetch": "^1.3.3",
     "node-notifier": "^4.2.1",
     "react": "^0.13.3",
